--- a/static/css/application.css
+++ b/static/css/application.css
@@ -6,5 +6,6 @@ h1{font:bold 16px tahoma,arial,sans-serif;color:white;margin:0;padding:5px;}
 #welcome p{margin-bottom:1em;}
 #welcome ul li{list-style:square;margin-left:2em;}
 
-.icon-welcome{background-image:url(images/icons/script.png);}
+.icon-welcome{background-image:url(../images/icons/script.png);}
+.icon-refresh{background-image:url(../images/icons/arrow_refresh.png);}
 
