--- a/static/css/application.css
+++ b/static/css/application.css
@@ -6,6 +6,9 @@ h1{font:bold 16px tahoma,arial,sans-serif;color:white;margin:0;padding:5px;}
 #welcome p{margin-bottom:1em;}
 #welcome ul li{list-style:square;margin-left:2em;}
 
-.icon-welcome{background-image:url(../images/icons/script.png);}
-.icon-refresh{background-image:url(../images/icons/arrow_refresh.png);}
+.icon-welcome{background-image:url(../images/icons/script.png)!important;}
+.icon-refresh{background-image:url(../images/icons/arrow_refresh.png)!important;}
+.icon-add{background-image:url(../images/icons/add.png)!important;}
+.icon-delete{background-image:url(../images/icons/delete.png)!important;}
+.icon-commit{background-image:url(../images/icons/database_save.png)!important;}
 
