URL has now instance prefix
http://fluiddbexplorer.appspot.com/(instance)/(starting namespace)

Instance is either fluiddb for fluiddb.fluidinfo.com or sandbox for
sandbox.fluidinfo.com. It accepts a hostname/IP address too.

Closes issue #1

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
 	App.Config.username = "{{ username }}";
 	App.Config.rootlabel = "{{ rootlabel }}";
 	App.Config.rootid = "{{ rootid }}";
+	App.Config.base_remote = "/remote/{{ instance }}/";
 </script>
 
 {% if handler.settings["debug"] %}
