--- a/static/css/application.css
+++ b/static/css/application.css
@@ -4,8 +4,11 @@ html,body{font:normal 12px verdana;margin:0;padding:0;border:0;overflow:hidden;h
 h1{font:bold 16px tahoma,arial,sans-serif;color:white;margin:0;padding:5px;}
 
 #welcome h2{font-size:1.4em;margin-bottom:1em;}
+#welcome strong{font-weight:bold;}
 #welcome p{margin-bottom:1em;}
+#welcome ul{margin-bottom:1em;}
 #welcome ul li{list-style:square;margin-left:2em;}
+#welcome .warning{border:2px solid #800;background-color:#f66;padding:10px;-moz-border-radius:4px;margin-bottom:1em;}
 
 .icon-welcome{background-image:url(../images/icons/script.png)!important;}
 .icon-refresh{background-image:url(../images/icons/arrow_refresh.png)!important;}
