Updated How it's build

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,9 +42,9 @@
 		<li><a href="http://www.fluidinfo.com/fluiddb" target="_blank">FluidDB</a></li>
 		<li><a href="http://bitbucket.org/aafshar/fom-main/wiki/Home" target="_blank">FOM</a></li>
 		<li><a href="http://www.extjs.com" target="_blank">ExtJS</a></li>
-		<li><a href="http://www.tornadoweb.org/" target="_blank">Tornado</a></li>
-		<li><a href="http://code.google.com/appengine/" target="_blank">Google App Engine</a></li>
-		<li><a href="http://python.org" target="_blank">Python</a></li>
+		<li><a href="http://flask.pocoo.org" target="_blank">Flask</a></li>
+		<li><a href="http://gunicorn.org" target="_blank">Gunicorn</a></li>
+		<li><a href="http://nginx.org" target="_blank">nginx</a></li>
 	</ul>
 </div>
 
