--- a/templates/index.html
+++ b/templates/index.html
@@ -24,11 +24,11 @@
 	{% endif %}
 	<h3>What is FluidDB Explorer ?</h3>
 	<p>With this tool you can quickly navigate in <a href="http://www.fluidinfo.com/fluiddb" target="_blank">FluidDB</a>, using either the namespace tree or via <a href="http://doc.fluidinfo.com/fluidDB/queries.html" target="_blank">FluidDB queries</a>.</p>
-	<p>You can explore either the main FluidDB instance (the default), or the sandbox, at: <a href="http://fluiddbexplorer.appspot.com/sandbox/">http://fluiddbexplorer.appspot.com/sandbox/</a></p>
+	<p>You can explore either the main FluidDB instance (the default), or the sandbox, at: <a href="{{ config.BASE_URL }}/sandbox/">{{ config.BASE_URL }}/sandbox/</a></p>
 	<p>To start exploring from a top-level namespace, add it to the URL. Here are some examples:</p>
 	<ul>
-		<li><a href="http://fluiddbexplorer.appspot.com/fluiddb/twitter.com">http://fluiddbexplorer.appspot.com/fluiddb/twitter.com</a></li>
-		<li><a href="http://fluiddbexplorer.appspot.com/fluiddb/epointsystem/scada">http://fluiddbexplorer.appspot.com/fluiddb/epointsystem/scada</a></li>
+		<li><a href="{{ config.BASE_URL }}/fluiddb/twitter.com">{{ config.BASE_URL }}/fluiddb/twitter.com</a></li>
+		<li><a href="{{ config.BASE_URL }}/fluiddb/epointsystem/scada">{{ config.BASE_URL }}/fluiddb/epointsystem/scada</a></li>
 	</ul>
 	<p>If you don't have a FluidDB account, feel free to <a href="http://fluidinfo.com/accounts/new/" target="_blank">create one</a>!</p>
 
