--- a/fluiddbexplorer/templates/index.html
+++ b/fluiddbexplorer/templates/index.html
@@ -66,13 +66,13 @@ var _gaq=_gaq||[];_gaq.push(['_setAccount','{{ config.GOOGLE_ANALYTICS_CODE }}']
 	App.Config.username = "{{ username }}";
 	App.Config.rootlabel = "{{ rootlabel }}";
 	App.Config.rootid = "{{ rootid }}";
-	App.Config.base_remote = "/remote/{{ instance }}/";
 {% if config.GOOGLE_ANALYTICS_CODE %}
 	Ext.Ajax.on('requestcomplete', function(c, r, o){
 		_gaq.push(['_trackPageview', o.url]);
 	});
 {% endif %}
 </script>
+<script type="text/javascript" src="{{ url_for('directapi') }}"></script>
 
 {% if config.DEBUG %}
 <script type="text/javascript" src="{{ url_for('static', filename="js/miframe.js") }}"></script>
