--- a/fluiddbexplorer/static/css/application.css
+++ b/fluiddbexplorer/static/css/application.css
@@ -25,3 +25,5 @@ h1{font:bold 16px tahoma,arial,sans-serif;color:white;margin:0;padding-left:5px;
 .icon-tag-remove{background-image:url(../images/icons/tag_blue_delete.png)!important;}
 
 #namespacestree .x-tree-node-leaf .x-tree-node-icon{background-image:url(../images/icons/tag_blue.png)!important;}
+
+.ux-mif{background-color:#fff;}
