--- a/fluiddbexplorer/templates/index.html
+++ b/fluiddbexplorer/templates/index.html
@@ -64,6 +64,13 @@ var _gaq=_gaq||[];_gaq.push(['_setAccount','{{ config.GOOGLE_ANALYTICS_CODE }}']
 	App.Config.username = "{{ username }}";
 	App.Config.rootlabel = "{{ rootlabel }}";
 	App.Config.rootid = "{{ rootid }}";
+{% if autoopenobject %}
+	App.Config.autoopenobject = "{{ autoopenobject }}";
+{% endif %}
+{% if autoopenabout %}
+	App.Config.autoopenabout = "{{ autoopenabout }}";
+{% endif %}
+
 	App.Config.baseurl_instance = "{{ instance }}.fluidinfo.com";
 {% if config.GOOGLE_ANALYTICS_CODE %}
 	Ext.Ajax.on('requestcomplete', function(c, r, o){
