Ability to create new object

--- a/fluiddbexplorer/templates/index.html
+++ b/fluiddbexplorer/templates/index.html
@@ -92,6 +92,7 @@ var _gaq=_gaq||[];_gaq.push(['_setAccount','{{ config.GOOGLE_ANALYTICS_CODE }}']
 <script type="text/javascript" src="{{ url_for('static', filename="js/App.ResultsGrid.js") }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename="js/App.PermissionsPanel.js") }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename="js/App.LoginWindow.js") }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename="js/App.CreateObject.js") }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename="js/application.js") }}"></script>
 {% else %}
 <script type="text/javascript" src="{{ url_for('static', filename="fluiddbexplorer.js") }}"></script>
