--- a/fluiddbexplorer/templates/index.html
+++ b/fluiddbexplorer/templates/index.html
@@ -71,7 +71,7 @@ var _gaq=_gaq||[];_gaq.push(['_setAccount','{{ config.GOOGLE_ANALYTICS_CODE }}']
 	App.Config.autoopenabout = "{{ autoopenabout }}";
 {% endif %}
 
-	App.Config.baseurl_instance = "{{ instance }}.fluidinfo.com";
+	App.Config.baseurl_instance = "{{ baseurl_instance }}";
 {% if config.GOOGLE_ANALYTICS_CODE %}
 	Ext.Ajax.on('requestcomplete', function(c, r, o){
 		_gaq.push(['_trackPageview', o.url]);
