Updated example on index page to use a different Bach piece.

--- a/fluiddbexplorer/templates/index.html
+++ b/fluiddbexplorer/templates/index.html
@@ -46,8 +46,8 @@
     <ul>
       <li>Python in a Nutshell (second edition):
         <a href="{{ config.BASE_URL }}/fluidinfo/about/book:python%20in%20a%20nutshell%20second%20edition%20(alex%20martelli)">{{ config.BASE_URL }}/fluidinfo/about/book:python in a nutshell second edition (alex martelli)</a></li>
-      <li>Bach's Toccata &amp; Fugue in D minor (BWV 565):
-        <a href="{{ config.BASE_URL }}/fluidinfo/about/BWV565">{{ config.BASE_URL }}/fluidinfo/about/BWV565</a></li>
+      <li>Bach's first cello suite in G Major (BWV 1007):
+        <a href="{{ config.BASE_URL }}/fluidinfo/about/BWV1007">{{ config.BASE_URL }}/fluidinfo/about/BWV1007</a></li>
       <li>The object keeping track of entries in the O'Reilly API competition: <a href="{{ config.BASE_URL }}/fluidinfo/object/5783673e-766c-40d6-b697-4d283adec430">{{ config.BASE_URL }}/fluidinfo/object/5783673e-766c-40d6-b697-4d283adec430</a></li>
     </ul>
 
@@ -56,14 +56,15 @@
       <a href="http://blogs.fluidinfo.com/fluidinfo/2011/01/10/introducing-the-fluiddb-explorer/">Introducing the Fluidinfo Explorer</a>.
 
       If you want to use the explorer to add information to Fluidinfo,
-      you'll need an account. If you don't have one,
-      <a href="http://fluidinfo.com/accounts/new/" target="_blank">sign up here</a>.
+      you'll need to
+      <a href="http://fluidinfo.com/accounts/new/" target="_blank">create an account</a>.
 
       And of course you can also visit our web site to learn more
       about <a href="http://fluidinfo.com" target="_blank">Fluidinfo</a> in
       general.</p>
 
     <p>The explorer was written by <a href="http://twitter.com/paparent">Pier-Andre Parent</a> using
+      <a href="http://doc.fluidinfo.com/fluidDB/api/index.html" target="_blank">the Fluidinfo API</a>,
       <a href="https://launchpad.net/fom" target="_blank">FOM</a>,
       <a href="http://www.extjs.com" target="_blank">ExtJS</a>,
       <a href="http://flask.pocoo.org" target="_blank">Flask</a>,
