Fixed Pier's name

--- a/fluiddbexplorer/templates/index.html
+++ b/fluiddbexplorer/templates/index.html
@@ -63,7 +63,7 @@
       about <a href="http://fluidinfo.com" target="_blank">Fluidinfo</a> in
       general.</p>
 
-    <p>The explorer was written by <a href="http://twitter.com/paparent">Pier-Andre Parent</a> using
+    <p>The explorer was written by <a href="http://twitter.com/paparent">Pier Andr&eacute; Parent</a> using
       <a href="http://doc.fluidinfo.com/fluidDB/api/index.html" target="_blank">the Fluidinfo API</a>,
       <a href="https://launchpad.net/fom" target="_blank">FOM</a>,
       <a href="http://www.extjs.com" target="_blank">ExtJS</a>,
