Make tag value addition to an object be just one step

--- a/fluiddbexplorer/templates/index.html
+++ b/fluiddbexplorer/templates/index.html
@@ -119,6 +119,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename="js/App.LoginWindow.js") }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename="js/App.CreateObject.js") }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename="js/App.ObjectInfoWindow.js") }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename="js/App.TagValueWindow.js") }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename="js/application.js") }}"></script>
 {% else %}
 <script type="text/javascript" src="{{ url_for('static', filename="fluiddbexplorer.js") }}"></script>
