Uses Flask Module instead for extdirect code

--- a/fluiddbexplorer/templates/index.html
+++ b/fluiddbexplorer/templates/index.html
@@ -103,7 +103,7 @@
 	});
 {% endif %}
 </script>
-<script type="text/javascript" src="{{ url_for('directapi') }}"></script>
+<script type="text/javascript" src="{{ url_for('direct.directapi') }}"></script>
 
 {% if config.DEBUG %}
 <script type="text/javascript" src="{{ url_for('static', filename="js/Ext.ux.grid.BufferView.js") }}"></script>
